info aligned, margin fixed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,3 +4,7 @@
 body, html {
   height: 100%;
 }
+
+.decoration-none{
+  text-decoration: none;
+}
